cambio en la url de imagenes hero, portafolio y sobre mi

--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -80,7 +80,7 @@ h2{
     display: flex;
     align-items: center;
     height: 600px;
-    background-image: url(../img/Fondo.jpg);
+    background-image: url(https://i.imgur.com/S0rRhaF.jpeg);
     background-repeat: no-repeat;
     background-size: 100%;
 }
