Url online de todas las imágenes

--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -293,32 +293,32 @@ h1 strong{
 }
 
 .whatsapp{
-    background-image: url(../img/Whatsapp.png);
+    background-image: url(https://i.imgur.com/G1TAWSB.png);
     background-repeat: no-repeat;
 }
 
 .linkedin{
-    background-image: url(../img/linkedin.png);
+    background-image: url(https://i.imgur.com/Pts9UIp.png);
     background-repeat: no-repeat;
 }
 
 .github{
-    background-image: url(../img/github-1.png);
+    background-image: url(https://i.imgur.com/ACLDgh8.png);
     background-repeat: no-repeat;
 }
 
 .twitter{
-    background-image: url(../img/twitter.png);
+    background-image: url(https://i.imgur.com/MnYwRGC.png);
     background-repeat: no-repeat;
 }
 
 .facebook{
-    background-image: url(../img/facebook.png);
+    background-image: url(https://i.imgur.com/CqoFcxk.png);
     background-repeat: no-repeat;
 }
 
 .instagram{
-    background-image: url(../img/instagram.png);
+    background-image: url(https://i.imgur.com/PqUmOqJ.png);
     background-repeat: no-repeat;
 }
 
