Cambio del orden de la sección sobre mi, imagenes más ligeras y dos links funcionales

--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -80,7 +80,7 @@ h2{
     display: flex;
     align-items: center;
     height: 600px;
-    background-image: url(https://i.imgur.com/S0rRhaF.jpeg);
+    background-image: url(https://i.imgur.com/U7uZJ6o.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -293,32 +293,32 @@ h1 strong{
 }
 
 .whatsapp{
-    background-image: url(https://i.imgur.com/G1TAWSB.png);
+    background-image: url(https://i.imgur.com/Z0dWBlD.png);
     background-repeat: no-repeat;
 }
 
 .linkedin{
-    background-image: url(https://i.imgur.com/Pts9UIp.png);
+    background-image: url(https://i.imgur.com/472vTEx.png);
     background-repeat: no-repeat;
 }
 
 .github{
-    background-image: url(https://i.imgur.com/ACLDgh8.png);
+    background-image: url(https://i.imgur.com/oGteJnN.png);
     background-repeat: no-repeat;
 }
 
 .twitter{
-    background-image: url(https://i.imgur.com/MnYwRGC.png);
+    background-image: url(https://i.imgur.com/VKoGqA4.png);
     background-repeat: no-repeat;
 }
 
 .facebook{
-    background-image: url(https://i.imgur.com/CqoFcxk.png);
+    background-image: url(https://i.imgur.com/FoqLAr8.png);
     background-repeat: no-repeat;
 }
 
 .instagram{
-    background-image: url(https://i.imgur.com/PqUmOqJ.png);
+    background-image: url(https://i.imgur.com/Neg191p.png);
     background-repeat: no-repeat;
 }
 
